src/styles/index.scss
@use './_base.scss' as *;
@use './colors' as *;

@import './reset.scss';

/* Font Loading Strategy */
:root {
  --font-common: Arial, Helvetica, sans-serif;
  --font-title: 'Oxygen', Arial, Helvetica, sans-serif;
  --font-code: monospace;
}
:root.fonts-loaded {
  --font-common: 'Exo-2', Arial, Helvetica, sans-serif;
  --font-title: 'Oxygen', Arial, Helvetica, sans-serif;
  --font-code: 'Source Code Pro', monospace;

  @supports (font-variation-settings: normal) {
    --font-common: 'Exo-2 VF', 'Exo-2', Arial, Helvetica, sans-serif;
  }
}

/* Color Palette Injection */
:root {
  --white: #{$clr-white};
  --shade-100: #{$clr-shade-100};
  --shade-200: #{$clr-shade-200};
  --shade-300: #{$clr-shade-300};
  --shade-400: #{$clr-shade-400};
  --shade-500: #{$clr-shade-500};
  --shade-600: #{$clr-shade-600};
  --shade-700: #{$clr-shade-700};
  --shade-800: #{$clr-shade-800};
  --shade-900: #{$clr-shade-900};
  --black: #{$clr-black};

  --primary-100: #{$clr-primary-100};
  --primary-200: #{$clr-primary-200};
  --primary-300: #{$clr-primary-300};
  --primary-400: #{$clr-primary-400};
  --primary-500: #{$clr-primary-500};
  --primary-600: #{$clr-primary-600};
  --primary-700: #{$clr-primary-700};

  --secondary-100: #{$clr-secondary-100};
  --secondary-200: #{$clr-secondary-200};
  --secondary-300: #{$clr-secondary-300};
  --secondary-400: #{$clr-secondary-400};
  --secondary-500: #{$clr-secondary-500};
  --secondary-600: #{$clr-secondary-600};
  --secondary-700: #{$clr-secondary-700};

  --tertiary-100: #{$clr-tertiary-100};
  --tertiary-200: #{$clr-tertiary-200};
  --tertiary-300: #{$clr-tertiary-300};
  --tertiary-400: #{$clr-tertiary-400};
  --tertiary-500: #{$clr-tertiary-500};
  --tertiary-600: #{$clr-tertiary-600};
  --tertiary-700: #{$clr-tertiary-700};
}

html {
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
  overflow-x: hidden;

  @include font_common();
  font-size: 20px;
}

body {
  display: flex;
  flex-flow: column nowrap;
  width: 100%;
  min-height: 100vh;
  margin: 0;
  padding: 0;

  background-color: var(--white);
  color: var(--black);

  @include font_common();
  font-size: 20px;
}

/* A11y hiding */
.hidden {
  position: absolute; 
  overflow: hidden; 
  clip: rect(0 0 0 0); 
  height: 1px;
  width: 1px; 
  margin: -1px;
  padding: 0;
  border: 0; 
}

h1, h2, h3 {
  @include font_title();
}
h1 { font-size: 2rem; }
h2 { font-size: 1.6rem; }
h3 { font-size: 1.3rem; }

b { font-weight: 500; }

.white {
  background: $clr-white;
  color: $clr-black;

  --rel-background: #{ $clr-white};
  --rel-color: #{ $clr-black };
  --rel-shade-100: #{ $clr-shade-100 };
  --rel-shade-200: #{ $clr-shade-200 };
  --rel-shade-300: #{ $clr-shade-300 };
  --rel-shade-400: #{ $clr-shade-400 };
  --rel-shade-500: #{ $clr-shade-500 };
  --rel-shade-600: #{ $clr-shade-600 };
  --rel-shade-700: #{ $clr-shade-700 };
}

.primary {
  background: $clr-primary-400;
  color: $clr-white;

  --rel-background: #{ $clr-primary-400 };
  --rel-color: #{ $clr-white };
  --rel-shade-100: #{ $clr-primary-700 };
  --rel-shade-200: #{ $clr-primary-600 };
  --rel-shade-300: #{ $clr-primary-500 };
  --rel-shade-400: #{ $clr-primary-400 };
  --rel-shade-500: #{ $clr-primary-300 };
  --rel-shade-600: #{ $clr-primary-200 };
  --rel-shade-700: #{ $clr-primary-100 };
}

.secondary {
  background: $clr-secondary-400;
  color: $clr-white;

  --rel-background: #{ $clr-secondary-400 };
  --rel-color: #{ $clr-white };
  --rel-shade-100: #{ $clr-secondary-700 };
  --rel-shade-200: #{ $clr-secondary-600 };
  --rel-shade-300: #{ $clr-secondary-500 };
  --rel-shade-400: #{ $clr-secondary-400 };
  --rel-shade-500: #{ $clr-secondary-300 };
  --rel-shade-600: #{ $clr-secondary-200 };
  --rel-shade-700: #{ $clr-secondary-100 };
}

.tertiary {
  background: $clr-tertiary-400;
  color: $clr-black;

  --rel-background: #{ $clr-tertiary-400 };
  --rel-color: #{ $clr-black };
  --rel-shade-100: #{ $clr-tertiary-100 };
  --rel-shade-200: #{ $clr-tertiary-200 };
  --rel-shade-300: #{ $clr-tertiary-300 };
  --rel-shade-400: #{ $clr-tertiary-400 };
  --rel-shade-500: #{ $clr-tertiary-500 };
  --rel-shade-600: #{ $clr-tertiary-600 };
  --rel-shade-700: #{ $clr-tertiary-700 };
}

footer#main-footer {
  display: flex;
  flex-flow: column nowrap;
  
  position: relative;
  width: 100%;
  padding: 1rem;
  background: $clr-black;

  @include font_common();
  font-size: 1rem;
  color: $clr-white;
}

